--- a/index.html
+++ b/index.html
@@ -2,38 +2,72 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <title>Trova Contatti da Sito</title>
+  <title>Ricerca Email e Telefono da Sito Web</title>
   <style>
-    body { font-family: sans-serif; max-width: 600px; margin: 50px auto; }
-    input, button { padding: 10px; width: 100%; margin-top: 10px; }
-    #risultati { margin-top: 20px; font-weight: bold; white-space: pre-line; }
+    body {
+      font-family: sans-serif;
+      max-width: 600px;
+      margin: 50px auto;
+      padding: 20px;
+      background-color: #f8f8f8;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    input, button {
+      padding: 10px;
+      width: 100%;
+      margin-top: 10px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      font-size: 16px;
+    }
+    button {
+      background-color: #007BFF;
+      color: white;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+    button:hover {
+      background-color: #0056b3;
+    }
+    #risultati {
+      margin-top: 20px;
+      font-weight: bold;
+      white-space: pre-line;
+      background: white;
+      padding: 15px;
+      border-radius: 5px;
+    }
   </style>
 </head>
 <body>
-  <h2>Trova email e numero di telefono da un sito web</h2>
+  <h2>Trova Email e Numero di Telefono da un Sito Web</h2>
   <input type="text" id="websiteUrl" placeholder="Inserisci l'URL del sito (es: https://esempio.it)">
-  <button onclick="trovaContatti()">Cerca contatti</button>
+  <button onclick="trovaContatti()">Cerca Contatti</button>
   <div id="risultati"></div>
 
   <script>
     async function trovaContatti() {
       const url = document.getElementById("websiteUrl").value;
       const risultato = document.getElementById("risultati");
-      risultato.textContent = "Ricerca in corso...";
+      risultato.textContent = "Cerco nella pagina...";
 
       try {
         const response = await fetch("https://api.allorigins.win/raw?url=" + encodeURIComponent(url));
-        const text = await response.text();
+        const html = await response.text();
 
-        const emailMatch = text.match(/[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-z]{2,}/g);
-        const telefonoMatch = text.match(/(?:\+39\s?)?\(?\d{2,4}\)?[\s.-]?\d{5,8}[\s.-]?\d{0,4}/g);
+        const emailRegex = /[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-z]{2,}/g;
+        const phoneRegex = /(?:\+39[\s.-]?)?(?:\(?\d{2,4}\)?[\s.-]?)?\d{3,4}[\s.-]?\d{4,5}/g;
 
-        const email = emailMatch ? emailMatch[0] : "Email non trovata 😕";
-        const telefono = telefonoMatch ? telefonoMatch[0] : "Telefono non trovato 😕";
+        const emails = html.match(emailRegex);
+        const phones = html.match(phoneRegex);
 
-        risultato.textContent = `Email trovata: ${email}\nTelefono trovato: ${telefono}`;
-      } catch (error) {
-        risultato.textContent = "Errore durante la ricerca. Controlla l'URL.";
+        const email = emails ? emails[0] : "❌ Nessuna email trovata";
+        const telefono = phones ? phones[0] : "❌ Nessun numero trovato";
+
+        risultato.textContent = `📧 Email: ${email}\n📞 Telefono: ${telefono}`;
+      } catch (err) {
+        risultato.textContent = "Errore durante la ricerca. URL non accessibile o bloccato.";
       }
     }
   </script>
