--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <title>Ricerca Email e Telefono da Sito Web</title>
+  <title>Trova Contatti da Sito</title>
   <style>
     body {
       font-family: sans-serif;
       max-width: 600px;
       margin: 50px auto;
+      background: #f9f9f9;
       padding: 20px;
-      background-color: #f8f8f8;
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
@@ -17,23 +17,22 @@
       padding: 10px;
       width: 100%;
       margin-top: 10px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
       font-size: 16px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
     }
     button {
       background-color: #007BFF;
       color: white;
       cursor: pointer;
-      transition: background-color 0.3s ease;
     }
     button:hover {
       background-color: #0056b3;
     }
     #risultati {
       margin-top: 20px;
-      font-weight: bold;
-      white-space: pre-line;
+      white-space: pre-wrap;
+      font-size: 16px;
       background: white;
       padding: 15px;
       border-radius: 5px;
@@ -41,33 +40,35 @@
   </style>
 </head>
 <body>
-  <h2>Trova Email e Numero di Telefono da un Sito Web</h2>
-  <input type="text" id="websiteUrl" placeholder="Inserisci l'URL del sito (es: https://esempio.it)">
+  <h2>Trova Email e Numero da un Sito Web</h2>
+  <input type="text" id="websiteUrl" placeholder="Inserisci un URL (es: https://esempio.it)">
   <button onclick="trovaContatti()">Cerca Contatti</button>
   <div id="risultati"></div>
 
   <script>
     async function trovaContatti() {
-      const url = document.getElementById("websiteUrl").value;
-      const risultato = document.getElementById("risultati");
-      risultato.textContent = "Cerco nella pagina...";
+      const url = document.getElementById("websiteUrl").value.trim();
+      const risultati = document.getElementById("risultati");
+      risultati.textContent = "⏳ Cerco i contatti...";
+
+      if (!url.startsWith("http")) {
+        risultati.textContent = "❌ Inserisci un URL valido (con http o https)";
+        return;
+      }
 
       try {
         const response = await fetch("https://api.allorigins.win/raw?url=" + encodeURIComponent(url));
         const html = await response.text();
 
-        const emailRegex = /[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-z]{2,}/g;
-        const phoneRegex = /(?:\+39[\s.-]?)?(?:\(?\d{2,4}\)?[\s.-]?)?\d{3,4}[\s.-]?\d{4,5}/g;
+        const emailRegex = /[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-z]{2,}/g;
+        const phoneRegex = /(?:\\+39[\\s.-]?)?(\\(?\\d{2,4}\\)?[\\s.-]?)?\\d{3,4}[\\s.-]?\\d{4,5}/g;
 
-        const emails = html.match(emailRegex);
-        const phones = html.match(phoneRegex);
+        const emails = html.match(emailRegex) || [];
+        const phones = html.match(phoneRegex) || [];
 
-        const email = emails ? emails[0] : "❌ Nessuna email trovata";
-        const telefono = phones ? phones[0] : "❌ Nessun numero trovato";
-
-        risultato.textContent = `📧 Email: ${email}\n📞 Telefono: ${telefono}`;
+        risultati.textContent = `📧 Email trovata: ${emails[0] || 'Nessuna'}\n📞 Telefono trovato: ${phones[0] || 'Nessuno'}`;
       } catch (err) {
-        risultato.textContent = "Errore durante la ricerca. URL non accessibile o bloccato.";
+        risultati.textContent = "❌ Errore nel recupero dei dati. Il sito potrebbe essere bloccato.";
       }
     }
   </script>
