--- a/index.html
+++ b/index.html
@@ -2,70 +2,132 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
+  <title>Estrazione Contatti Web</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Estrazione Email e Telefoni</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to right, #f0f2f5, #e0e5ec);
+      margin: 0;
+      padding: 30px;
+      color: #333;
+    }
+
+    .container {
       max-width: 700px;
-      margin: 40px auto;
-      padding: 20px;
-      background: #f4f4f4;
+      margin: auto;
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+      padding: 30px;
     }
-    input, button {
+
+    h1 {
+      text-align: center;
+      margin-bottom: 30px;
+    }
+
+    input[type="text"] {
       width: 100%;
-      padding: 10px;
-      margin: 10px 0;
+      padding: 12px;
       font-size: 16px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      box-sizing: border-box;
     }
+
+    button {
+      margin-top: 15px;
+      width: 100%;
+      padding: 12px;
+      font-size: 18px;
+      background-color: #007bff;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #0056b3;
+    }
+
+    .results {
+      margin-top: 30px;
+    }
+
     ul {
-      background: #fff;
+      list-style: none;
+      padding-left: 0;
+      background: #f9f9f9;
+      border-radius: 8px;
       padding: 15px;
-      border-radius: 5px;
     }
+
     li {
       margin: 5px 0;
+    }
+
+    .error {
+      color: red;
+      margin-top: 20px;
+      font-weight: bold;
+    }
+
+    .success {
+      color: green;
     }
   </style>
 </head>
 <body>
-  <h1>Estrai Email e Numeri da un sito</h1>
-  <input type="text" id="url" placeholder="Inserisci un URL (con https://)">
-  <button onclick="estraiContatti()">Estrai Contatti</button>
+  <div class="container">
+    <h1>Estrai Email & Telefoni da un Sito</h1>
+    <input type="text" id="url" placeholder="Es: https://www.iana.org/domains/reserved" />
+    <button onclick="estraiContatti()">Estrai Contatti</button>
+    <div id="messaggio" class="error"></div>
 
-  <h2>Email trovate:</h2>
-  <ul id="emails"></ul>
+    <div class="results">
+      <h2>Email trovate:</h2>
+      <ul id="emails"></ul>
 
-  <h2>Numeri di telefono trovati:</h2>
-  <ul id="phones"></ul>
+      <h2>Numeri di telefono trovati:</h2>
+      <ul id="phones"></ul>
+    </div>
+  </div>
 
   <script>
     async function estraiContatti() {
-      const url = document.getElementById("url").value;
-      document.getElementById("emails").innerHTML = "";
-      document.getElementById("phones").innerHTML = "";
+      const urlInput = document.getElementById("url").value.trim();
+      const msg = document.getElementById("messaggio");
+      const emailsList = document.getElementById("emails");
+      const phonesList = document.getElementById("phones");
+      msg.innerText = "";
+      emailsList.innerHTML = "";
+      phonesList.innerHTML = "";
+
+      if (!urlInput.startsWith("http")) {
+        msg.innerText = "⚠️ Inserisci un URL valido che inizi con http o https.";
+        return;
+      }
+
+      msg.innerText = "⏳ Analisi in corso...";
 
       try {
-        const response = await fetch(`https://api.allorigins.win/raw?url=${encodeURIComponent(url)}`);
+        const response = await fetch(`https://api.allorigins.win/raw?url=${encodeURIComponent(urlInput)}`);
         const html = await response.text();
 
         const emails = [...new Set(html.match(/[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-z]{2,}/g))];
         const phones = [...new Set(html.match(/(\+?\d{1,4}[\s.-]?)?(\(?\d{2,4}\)?[\s.-]?)?[\d\s.-]{6,12}/g))];
 
-        if (emails.length > 0) {
-          document.getElementById("emails").innerHTML = emails.map(e => `<li>${e}</li>`).join('');
-        } else {
-          document.getElementById("emails").innerHTML = "<li>Nessuna email trovata</li>";
-        }
+        msg.innerText = "✅ Estrazione completata!";
+        msg.className = "success";
 
-        if (phones.length > 0) {
-          document.getElementById("phones").innerHTML = phones.map(p => `<li>${p}</li>`).join('');
-        } else {
-          document.getElementById("phones").innerHTML = "<li>Nessun numero trovato</li>";
-        }
+        emailsList.innerHTML = emails.length ? emails.map(e => `<li>${e}</li>`).join("") : "<li>Nessuna email trovata</li>";
+        phonesList.innerHTML = phones.length ? phones.map(p => `<li>${p}</li>`).join("") : "<li>Nessun numero trovato</li>";
 
       } catch (error) {
-        alert("Errore durante l'analisi. Il sito potrebbe bloccare le richieste.");
+        msg.innerText = "❌ Errore durante il recupero dei dati. Il sito potrebbe bloccare le richieste.";
+        msg.className = "error";
         console.error(error);
       }
     }
